--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="#">Link</a>
+  <a href="/pages/proj.html">Project 1</a>
   <a href="#">Link</a>
   <a href="#">Link</a>
   <a href="#" class="right">Link</a>
